Updated the inventory.html, main.js, and styles.css files. Added calorie information to main.js code innertext to be displayed when the product picture is clicked on. Added a div with the class of 'fixed-footer' to house the information for the footer (second stretch goal) in the inventory.html file. Added a fixed postion to the styles.css file to keep the footer in place and styled it with the same color and font as the header.

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
 }
 .whole-thing {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 1fr);  
 }
 #reset-form {
     grid-column: 4;
@@ -129,4 +129,13 @@
 #new-addition {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color:rgb(90, 42, 7);
+}
+.fixed-footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(103, 47, 8, 0.992);
+    font-family: fantasy;
+    text-align: center;
 }
